# genalyzer

./: .buildinfo  .clang-format  .clang-format-ignore  .gitignore  .pre-commit-config.yaml  01_introduction.html  02_using_genalyzer.html  02a_test_configuration.html  02b_waveform_generation.html  02c_perf_metric_computation.html  03_examples.html  CMakeLists.txt  Cargo.toml  LICENSE_ADIBSD  README.md  build_fftw_wheel.sh  doc_notes.md  genindex.html  index.html  libgenalyzer.iss.cmakein  libgenalyzer.pc.cmakein  mkdocs.yml  objects.inv  requirements.txt  requirements_doc.txt  requirements_test.txt  search.html  searchindex.js  tasks.py
bindings/c/src/: CMakeLists.txt  add_band.cpp  add_fixed_tone.cpp  add_max_tone.cpp  cJSON.c  cgenalyzer.cpp  cgenalyzer_advanced.cpp  cgenalyzer_advanced2.cpp  cgenalyzer_private.cpp  cgenalyzer_simplified_beta.cpp  compute_dnl.cpp  compute_inl.cpp  compute_metric.cpp  config_noise_meas.cpp  config_ramp_nl_meas.cpp  config_tone_gen.cpp  config_tone_meas.cpp  config_tone_nl_meas.cpp  create_fft_analysis_wrapper.cpp  destroy_fft_analysis_wrapper.cpp  fft.cpp  fft_mp.cpp  fft_norm.cpp  gen_noise.cpp  gen_ramp.cpp  gen_tone.cpp  metric.cpp  quantize.cpp  quantize64.cpp  rfft.cpp  rfft_mp.cpp  rfft_norm.cpp  set_analysis_band.cpp  set_fdata.cpp  set_fsample.cpp  set_fshift.cpp
bindings/python/: CMakeLists.txt  MANIFEST.in  README.md  __init__.py  genalyzer.py  genalyzer2.py  genalyzer_advanced.py  genalyzer_plus_plus.py  pyproject.toml  setup.py.cmakein  tmp.txt
bindings/python/examples/: compute_fft.py  do_fourier_analysis.py  do_fourier_analysis_pluto.py  do_fourier_analysis_pluto_auto.py  do_histogram_analysis.py  do_waveform_analysis.py  fft_analysis.py  fft_analysis_advanced.py  fft_analysis_pyadi.py  fft_example.py  fsnr_pluto.py  gen_tone_and_quantize.py  gen_tone_example.py  gn_doc_fft.py  gn_doc_helper.py  gn_doc_spectral_analysis1.py  gn_doc_spectral_analysis2.py  gn_doc_spectral_analysis_plutosdr.py  gn_doc_tone_gen.py  quantize_example.py  real_analysis.py  real_analysis_advanced.py  rfft_example.py  sfdr_pluto.py  sinad_pluto.py  snr_pluto.py  (+5 more)
doc/: 02_using_genalyzer.rst  02a_test_configuration.rst  CMakeLists.txt  Doxyfile.in  conf.py  examples.md  gen_api_page.py  general_example_noise_configuration.c  general_example_ramp_configuration.c  general_example_skelton1.c  general_example_skelton2.c  general_example_skelton3.c  general_example_tone_configuration.c  index.rst  reference.md  reference_cpp.md  setup.md  sim.md  spectral_analysis.md  spectral_analysis_ssb.md  spectral_analysis_ssb_hd.md  theory.md  working_example.md  working_example_tone_instr.c  working_example_tone_sim.c
doc/c/: configs.rst
doc/mcp/: index.md
doc/pytest/: index.md
doc/python/: enumerations.rst  fourier_analysis.rst  fourier_configuration.rst  fourier_transforms.rst  genalyzer.advanced.rst  genalyzer.rst  genalyzer.simplified.rst  pyadi.rst  pygenalyzer.simplified.rst  signal_processing.rst  waveforms.rst
examples/: CMakeLists.txt  do_fa_pluto_example.c  do_fa_pluto_example_all_results.c  do_fa_pluto_example_all_results_bench.c  do_ha_sim_example.c  do_wfa_sim_example.c  fft_analysis.c  fft_analysis_genalyzer_advanced.c  fft_analysis_genalyzer_advanced_debug.c  fft_analysis_gn.c  matlab_loadlibrary.m  real_analysis_genalyzer_advanced.c
rust/fa/: Cargo.toml
rust/fourier/: Cargo.toml  pyproject.toml
src/: .clang-format  CMakeLists.txt  abstract_object.cpp  analysis.pro  array_math.cpp  array_ops.cpp  code_density.cpp  dft.cpp  enum_map.cpp  enum_maps.cpp  error.cpp  expression.cpp  fft_analysis2.cpp  fft_component.cpp  formatted_data.cpp  fourier_analysis.cpp  fourier_analysis_comp_mask.cpp  fourier_transforms.cpp  fourier_utilities.cpp  io_data.cpp  io_item.cpp  io_map.cpp  io_null.cpp  io_object.cpp  io_vector.cpp  json.cpp  manager.cpp  math_expression.cpp  math_expression_tokens.cpp  phase.c  platform.cpp  processes.cpp  real_to_string.cpp  sfdr.c  sparse_array_mask.cpp  spectrum.c  text_utils.cpp  thd.c  utils.cpp  var_item.cpp  (+4 more)
tests/: CMakeLists.txt  cJSON.c  cJSON.h  complex_phase_test.c  sfdr_test.c  test_AD9084Sim_SFDR.c  test_fa_get_all_results.c  test_fa_get_single_result.c  test_fft.c  test_gen_complex_tone.c  test_gen_ramp.c  test_gen_ramp_and_quantize.c  test_gen_real_tone.c  test_gen_tone.c  test_genalyzer.h  test_ha_get_all_results.c  test_histz.c  test_metric.c  test_pluto_metrics.c  test_quantize.c  test_quantize64.c~origin_tfcollins-updates  test_quantize_complex_tone.c  test_quantize_real_tone.c  test_ramp_dnl.c  test_rfft.c  test_wfa_get_all_results.c  thd_test.c
tests/test_vectors/: gen_tone_test_data.m  test_AD9084Sim_input_1621533708187.txt  test_Pluto_DDS_data.m  test_Pluto_DDS_data_1658159639196.json  test_Pluto_OneToneFFT.txt  test_Pluto_OneToneFFT2.txt  test_dnl_ramp_dnldata_output_1624564742718.txt  test_dnl_ramp_dnldata_output_1624566149450.txt  test_dnl_ramp_dnldata_output_1624566230213.txt  test_dnl_ramp_dnldata_output_1624566231920.txt  test_dnl_ramp_hits_output_1624564742718.txt  test_dnl_ramp_hits_output_1624566149450.txt  test_dnl_ramp_hits_output_1624566214978.txt  test_dnl_ramp_hits_output_1624566230213.txt  test_dnl_ramp_hits_output_1624566231920.txt  test_dnl_ramp_input_1624564742718.txt  test_dnl_ramp_input_1624566149450.txt  test_dnl_ramp_input_1624566214978.txt  test_dnl_ramp_input_1624566230213.txt  test_dnl_ramp_input_1624566231920.txt  test_fft_1626886354405.txt  test_fft_1626886382433.txt  test_fft_input_1619707831772.txt  test_fft_input_1619709331585.txt  test_fft_input_1619709332862.txt  test_fft_input_1619709333966.txt  test_fft_input_1619709336574.txt  test_fft_input_1619709340008.txt  test_fft_input_1619709341314.txt  test_fft_input_1619709342607.txt  test_fft_input_1619709343683.txt  test_fft_input_1619709344855.txt  test_fft_output_1619707831772.txt  test_fft_output_1619709331585.txt  test_fft_output_1619709332862.txt  test_fft_output_1619709333966.txt  test_fft_output_1619709336574.txt  test_fft_output_1619709340008.txt  test_fft_output_1619709341314.txt  test_fft_output_1619709342607.txt  (+119 more)
(+286 files in other folders)
