[build-system]
requires = ["setuptools>=40.6.0"]
build-backend = "setuptools.build_meta"


[project]
name = "genalyzer"
version = "0.1.2"
dynamic = ["readme"]
description = "Python bindings for genalyzer converter analysis library"
license = {text = "ADI BSD OR GPL-2.0-or-later"}
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules"]
requires-python = ">=3.9"
authors = [
    {name = "Peter Derounian", email="peter.derounian@analog.com"},
    {name = "Srikanth Pagadarai", email="srikanth.pagadarai@analog.com"},
    {name = "Travis Collins", email="travis.collins@analog.com"},
]
maintainers = [
    {name = "Srikanth Pagadarai", email="srikanth.pagadarai@analog.com"},
    {name = "Travis Collins", email="travis.collins@analog.com"},
    {name = "Analog Devices, Inc"}
]
dependencies = [
    'numpy >= 1.20',
]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["."]
include = ["genalyzer*"]
exclude = ["tests*"]
namespaces = true

[project.optional-dependencies]
tools = ["scipy"]
pytest = [
    "pytest >= 6.2",
    "pytest-reporter >= 0.4.0",
    "plotly >= 6.3.0",
    "matplotlib == 3.8.2",
    "mpld3 == 0.5.10",
    "pandas >= 1.3.0",
    "jinja2 >= 3.0.0",
    "docutils >= 0.17.0",
    "ansi2html >= 1.6.0",
]

[project.entry-points.pytest11]
genalyzer = "genalyzer.pytest.plugin"

[project.urls]
homepage = "https://analogdevicesinc.github.io/genalyzer/"
documentation = "https://analogdevicesinc.github.io/genalyzer/"
repository = "https://github.com/analogdevicesinc/genalyzer"

[tool.isort]
multi_line_output=3
include_trailing_comma="True"
force_grid_wrap=0
use_parentheses="True"
line_length=88

[tool.mypy]
ignore_missing_imports="true"
