[build-system]
requires = ["setuptools>=40.6.0"]
build-backend = "setuptools.build_meta"


[project]
name = "genalyzer"
version = "0.1.2"
dynamic = ["readme"]
description = "Python bindings for genalyzer converter analysis library"
license = {text = "ADI BSD OR GPL-2.0-or-later"}
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules"]
requires-python = ">=3.9"
authors = [
    {name = "Peter Derounian", email="peter.derounian@analog.com"},
    {name = "Srikanth Pagadarai", email="srikanth.pagadarai@analog.com"},
    {name = "Travis Collins", email="travis.collins@analog.com"},
]
maintainers = [
    {name = "Srikanth Pagadarai", email="srikanth.pagadarai@analog.com"},
    {name = "Travis Collins", email="travis.collins@analog.com"},
    {name = "Analog Devices, Inc"}
]
dependencies = [
    'numpy >= 1.20',
]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["."]
include = ["genalyzer*"]
exclude = ["tests*"]
namespaces = true

[project.scripts]
genalyzer-mcp = "genalyzer.mcp_server:main"

[project.optional-dependencies]
mcp = ["fastmcp; python_version>='3.10'", "numpy"]
tools = ["scipy"]
pytest = [
    "pytest >= 6.2",
    "pytest-reporter >= 0.4.0",
    "plotly >= 6.3.0",
    "matplotlib == 3.8.2",
    "mpld3 == 0.5.10",
    "pandas >= 1.3.0",
    "jinja2 >= 3.0.0",
    "docutils >= 0.17.0",
    "ansi2html >= 1.6.0",
]

[project.entry-points.pytest11]
genalyzer = "genalyzer.pytest.plugin"

[tool.setuptools.package-data]
genalyzer = ["genalyzer/pytest/templates/genalyzer/*"]

[project.urls]
homepage = "https://analogdevicesinc.github.io/genalyzer/"
documentation = "https://analogdevicesinc.github.io/genalyzer/"
repository = "https://github.com/analogdevicesinc/genalyzer"

[tool.pytest.ini_options]
collect_ignore_glob = ["tests/reports/samples/*"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "F401",   # unused imports in __init__.py (re-exports)
    "F821",   # undefined names (conditional imports in simplified_beta)
    "E501",   # line too long (handled by formatter)
    "SIM300", # yoda conditions (existing code style)
    "B028",   # no stacklevel in warnings
    "UP031",  # printf-style string formatting (existing code style)
]

[tool.ruff.lint.per-file-ignores]
"genalyzer/__init__.py" = ["F401", "I001"]
"genalyzer/simplified_beta/*" = ["F821", "E501", "W291", "W293", "UP004", "UP006", "UP032", "UP035", "I001", "SIM108", "RUF012"]
"genalyzer/helpers/*" = ["F821", "W291", "I001", "RUF012", "SIM105"]
"genalyzer/pytest/*" = ["W291", "W293", "I001", "B007", "B904", "SIM102", "SIM108", "RUF005"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.9"

[tool.ty.rules]
unresolved-import = "ignore"  # third-party deps not always installed

[[tool.ty.overrides]]
include = ["genalyzer/simplified_beta/**", "genalyzer/helpers/**", "genalyzer/pytest/**"]
[tool.ty.overrides.rules]
invalid-assignment = "ignore"
invalid-argument-type = "ignore"
invalid-parameter-default = "ignore"
invalid-return-type = "ignore"
not-iterable = "ignore"
unresolved-reference = "ignore"
unresolved-attribute = "ignore"
unsupported-operator = "ignore"
